--- a/codefresh.yaml
+++ b/codefresh.yaml
@@ -37,5 +37,6 @@ steps:
           - master
     tags:
       - "${{CF_BRANCH_TAG_NORMALIZED}}"
+      - "${{CF_RELEASE_TAG}}"
       - "${{CF_REVISION}}"
     stage: "push"
