--- a/test_yamls/service.yaml
+++ b/test_yamls/service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: hello-octarine
   namespace: hello-octarine
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   ports:
     - port: 80
       targetPort: 8080
