Update the validator to address customer's needs (#8)
* Added  filename and namespace to the output

* Refactor the filter

* Renamed the method

* Added tests to support filters

* Update the README

* addresed comments

* Latest Octactl

* CF changes

* Added namespace to the resouce key

* CF change

* CF change

--- a/codefresh.yaml
+++ b/codefresh.yaml
@@ -25,7 +25,7 @@ steps:
     commands:
       - pipenv run pytest
     stage: "test"
-  push:
+  push_master:
     title: "Pushing image to Dockerhub"
     type: "push"
     image_name: "octarinesec/validator"
@@ -36,6 +36,19 @@ steps:
         only:
           - master
     tags:
-      - "${{CF_RELEASE_TAG}}"
       - "${{CF_REVISION}}"
+    stage: "push"
+  push_release:
+    title: "Pushing image to Dockerhub"
+    type: "push"
+    image_name: "octarinesec/validator"
+    registry: "dockerhub"
+    candidate: "${{ValidatorImage}}"
+    when:
+      condition:
+        all:
+          triggerByRelease: "'${{CF_RELEASE_TAG}}' == 'true'"
+
+    tags:
+      - "${{CF_RELEASE_TAG}}"
     stage: "push"
